início da codificação

--- a/src/global.css
+++ b/src/global.css
@@ -15,6 +15,8 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: "Cabin", sans-serif;
+  background-color: var(--bg);
+  color: #fff;
 }
 img, picture, video, canvas, svg {
   display: block;
@@ -28,4 +30,13 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 h1, h2, h3 {
   font-family: "Roboto Condensed", sans-serif;
+}
+h1 {
+  font-size: calc(36 / 16 * 1rem);
+}
+
+/* Classes */
+.wrap {
+  margin: 0 auto;
+  padding: 0 40px;
 }
