--- a/src/global.css
+++ b/src/global.css
@@ -32,6 +32,11 @@ p, h1, h2, h3, h4, h5, h6 {
 a {
   display: inline-block;
   text-decoration: none;
+  text-underline-offset: 2px;
+}
+ul {
+  list-style: none;
+  padding-left: unset;
 }
 h1, h2, h3 {
   font-family: "Roboto Condensed", sans-serif;
